--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "license": "MIT",
   "description": "Boursicocotte online clone.",
   "main": "src/server/main.js",
+  "engines": {
+    "node": "12.9.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=production",
