--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["plugin:react/recommended", "standard"],
+  "extends": ["eslint:recommended", "plugin:react/recommended"],
   "parser": "babel-eslint",
   "env": {
     "node": true,
@@ -7,9 +7,12 @@
     "es6": true
   },
   "rules": {
-    "react/prop-types": "off",
-    "react/react-in-jsx-scope": "off",
-    "no-unused-vars": ["error", { "varsIgnorePattern": "h|Fragment" }]
-  },
-  "ignorePatterns": ["dist/"]
+    "curly": "error",
+    "semi": ["error", "always"],
+    "quotes": ["error", "double"],
+    "no-console": "warn",
+    "no-shadow": "warn",
+    "comma-dangle": "error",
+    "react/prop-types": "off"
+  }
 }
