--- a/package.json
+++ b/package.json
@@ -1,46 +1,40 @@
 {
   "name": "stonks",
-  "version": "1.2.1",
-  "description": "Boursicocotte online clone.",
-  "author": "Pierre Luycx",
+  "private": true,
+  "type": "module",
+  "version": "1.2.0",
+  "author": "tarhses",
   "license": "MIT",
+  "description": "Boursicocotte online clone.",
   "main": "src/server/main.js",
-  "type": "commonjs",
   "engines": {
-    "node": "12.16.1"
+    "node": "12.9.1"
   },
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=production",
-    "start": "node src/server/main.js",
-    "watch": "npm run watch-client & npm run watch-server",
-    "watch-client": "webpack -w --mode=development",
-    "watch-server": "nodemon -w src -i src/client src/server/main.js",
-    "test": "eslint . && echo \"No tests implemented\" && exit 1"
+    "start": "node --experimental-modules src/server/main.js",
+    "dev": "webpack -w --mode=development & nodemon -w src -i src/client --experimental-modules src/server/main.js"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "preact": "^10.3.4",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
-    "@babel/preset-react": "^7.9.1",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
-    "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-standard": "^4.0.1",
+    "eslint": "^6.3.0",
+    "eslint-plugin-react": "^7.14.3",
     "html-webpack-plugin": "^3.2.0",
-    "nodemon": "^1.19.4",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
-  },
-  "browserslist": ["defaults", "not ie 11"]
+    "nodemon": "^1.19.1",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.7"
+  }
 }
