--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode=production",
-    "start": "node --experimental-modules src/server/main.js",
-    "dev": "webpack -w --mode=development & nodemon -w src -i src/client --experimental-modules src/server/main.js"
+    "build": "webpack --mode=production --config webpack.config.cjs",
+    "start": "node --experimental-modules --experimental-json-modules src/server/main.js",
+    "dev": "webpack -w --mode=development --config webpack.config.cjs & nodemon -w src -i src/client --experimental-modules --experimental-json-modules src/server/main.js"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "eslint": "^6.3.0",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.20.0",
     "html-webpack-plugin": "^3.2.0",
-    "nodemon": "^1.19.1",
-    "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.7"
+    "nodemon": "^1.19.4",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   }
 }
