--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
+	"$schema": "https://json.schemastore.org/package",
   "name": "stonks",
   "type": "module",
   "private": true,
   "scripts": {
-    "start": "node --experimental-json-modules src/server/main.js",
-    "build": "rollup -c"
+    "start": "node src/server/main.js",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "format": "prettier src --write"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "preact": "^10.5.5",
-    "socket.io": "^2.4.0",
-    "socket.io-client": "^2.3.1"
+    "express": "^4.18.2",
+    "preact": "^10.11.3",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-transform-react-jsx": "^7.12.1",
-    "@rollup/plugin-babel": "^5.2.1",
-    "@rollup/plugin-commonjs": "^16.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^10.0.0",
-    "rollup": "^2.32.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "@preact/preset-vite": "^2.4.0",
+    "prettier": "^2.8.1",
+    "vite": "^3.2.5"
   }
 }
